[package]
name = "vsftp"
version = "0.1.0"
edition = "2024"
default-run = "vsftp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.3.1"
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
ssh2 = "0.9.0"
color-eyre = "0.6.3"
futures = "0.3"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
humansize = "2.1.3"
